only update items in mongo collection if there is a delta difference
