# src/main/java/com/manolitsas/david/model/common/DefinitionDetails.java
@@ -6,11 +6,21 @@ import lombok.Data;
 
 @Data
 @JsonIgnoreProperties(ignoreUnknown = true)
-public class ContentDetails {
+public class DefinitionDetails {
 
   @JsonProperty private DisplayProperties displayProperties;
+
+  @JsonProperty private Inventory inventory;
+
+  @JsonProperty private String itemTypeDisplayName;
+
+  @JsonProperty private String flavorText;
+
+  @JsonProperty private String screenshot;
 
   @JsonProperty private Long hash;
 
   @JsonProperty private Integer index;
+
+  @JsonProperty private Boolean isFeaturedItem;
 }
